--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -36,7 +36,7 @@
                 android:textStyle="bold" />
 
             <EditText
-                android:id="@+id/first_name"
+                android:id="@+id/first_name1"
                 android:layout_width="315dp"
                 android:layout_height="48dp"
                 android:layout_below="@+id/create"
@@ -51,10 +51,10 @@
 
             <EditText
 
-                android:id="@+id/last_name"
+                android:id="@+id/last_name1"
                 android:layout_width="315dp"
                 android:layout_height="48dp"
-                android:layout_below="@+id/first_name"
+                android:layout_below="@+id/first_name1"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="4dp"
                 android:layout_marginBottom="4dp"
@@ -66,10 +66,10 @@
 
             <EditText
 
-                android:id="@+id/email_name"
+                android:id="@+id/email_name1"
                 android:layout_width="315dp"
                 android:layout_height="48dp"
-                android:layout_below="@+id/last_name"
+                android:layout_below="@+id/last_name1"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="4dp"
                 android:layout_marginBottom="4dp"
@@ -81,10 +81,10 @@
 
             <EditText
 
-                android:id="@+id/password_name"
+                android:id="@+id/password_name1"
                 android:layout_width="315dp"
                 android:layout_height="48dp"
-                android:layout_below="@+id/email_name"
+                android:layout_below="@+id/email_name1"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="4dp"
                 android:layout_marginBottom="4dp"
@@ -98,7 +98,7 @@
                 android:id="@+id/privacy_linear_layout"
                 android:layout_width="315dp"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/password_name"
+                android:layout_below="@+id/password_name1"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="4dp"
                 android:layout_marginBottom="4dp"
@@ -106,7 +106,7 @@
                 android:weightSum="2">
 
                 <CheckBox
-                    android:id="@+id/checkbox_"
+                    android:id="@+id/checkbox_1"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
@@ -126,7 +126,7 @@
             </LinearLayout>
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/register"
+                android:id="@+id/register1"
                 android:layout_width="315dp"
                 android:layout_height="60dp"
                 android:layout_below="@id/privacy_linear_layout"
@@ -141,7 +141,7 @@
                 android:id="@+id/or_linear_layout"
                 android:layout_width="290dp"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/register"
+                android:layout_below="@+id/register1"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="4dp"
