--- a/app/src/main/res/layout/activity_complete_profile.xml
+++ b/app/src/main/res/layout/activity_complete_profile.xml
@@ -51,13 +51,13 @@
                 android:layout_below="@id/help_textview"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="4dp"
-                android:layout_marginBottom="4dp"
-                android:background="@drawable/spinner_drawable_left" />
+                android:layout_marginBottom="4dp"/>
 
             <EditText
                 android:id="@+id/birthday"
                 android:layout_width="315dp"
                 android:layout_height="48dp"
+                android:inputType="date"
                 android:layout_below="@+id/spinner_gender"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="4dp"
@@ -88,6 +88,7 @@
                     android:drawableLeft="@drawable/weight"
                     android:drawablePadding="5dp"
                     android:hint="Your Weight"
+                    android:inputType="number"
                     android:layout_marginRight="4dp"
                     android:padding="10dp" />
 
@@ -119,6 +120,7 @@
                     android:drawableLeft="@drawable/swap"
                     android:drawablePadding="5dp"
                     android:hint="Your Height"
+                    android:inputType="number"
                     android:layout_marginRight="4dp"
                     android:padding="10dp" />
 
