--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -6,237 +6,244 @@
     android:layout_height="match_parent"
     tools:context=".Views.SignUp.SignUp">
 
-    <androidx.core.widget.NestedScrollView
+    <TextView
+        android:id="@+id/there"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="40dp"
+        android:text="Hey there," />
+
+    <TextView
+        android:id="@+id/create"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/there"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp"
+        android:text="Create an account"
+        android:textColor="#000"
+        android:textSize="30sp"
+        android:textStyle="bold" />
+
+    <EditText
+        android:id="@+id/first_name1"
+        android:layout_width="315dp"
+        android:layout_height="48dp"
+        android:layout_below="@+id/create"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp"
+        android:background="@drawable/background_edittext"
+        android:drawableLeft="@drawable/profile"
+        android:drawablePadding="5dp"
+        android:hint="First name"
+        android:inputType="textPersonName"
+        android:padding="10dp" />
+
+    <EditText
+        android:id="@+id/last_name1"
+        android:layout_width="315dp"
+        android:layout_height="48dp"
+        android:layout_below="@+id/first_name1"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp"
+        android:background="@drawable/background_edittext"
+        android:drawableLeft="@drawable/profile"
+        android:drawablePadding="5dp"
+        android:hint="Last name"
+        android:inputType="textPersonName"
+        android:padding="10dp" />
+
+    <EditText
+        android:id="@+id/email_name1"
+        android:layout_width="315dp"
+        android:layout_height="48dp"
+        android:layout_below="@+id/last_name1"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp"
+        android:background="@drawable/background_edittext"
+        android:drawableLeft="@drawable/email"
+        android:drawablePadding="5dp"
+        android:hint="Email"
+        android:inputType="textEmailAddress"
+        android:padding="10dp" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/password_name1"
+        android:layout_width="315dp"
+        android:layout_height="48dp"
+        android:layout_below="@+id/email_name1"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="4dp"
+        app:hintTextColor="#878484"
+        app:boxStrokeColor="@color/white"
+        android:layout_marginBottom="4dp"
+        app:passwordToggleEnabled="true"
+        app:startIconDrawable="@drawable/lock">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/text_input_edittext"
+            android:layout_width="315dp"
+            android:layout_height="48dp"
+            android:background="@drawable/background_edittext"
+            android:hint="Password"
+            android:inputType="textPassword"
+            android:padding="10dp" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <LinearLayout
+        android:id="@+id/privacy_linear_layout"
+        android:layout_width="315dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/password_name1"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp"
+        android:orientation="horizontal"
+        android:weightSum="2">
+
+        <CheckBox
+            android:id="@+id/checkbox_1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="0.2"
+            android:gravity="center" />
+
+        <TextView
+            android:id="@+id/privacy"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1.8"
+            android:maxLines="2"
+            android:text="By continuing you accept our Privacy Policy and Term of Use"
+            android:textSize="14sp" />
+
+    </LinearLayout>
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/register1"
+            android:layout_width="315dp"
+            android:layout_height="40dp"
+            android:layout_below="@id/privacy_linear_layout"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="4dp"
+            android:background="@drawable/btn_background_register"
+            android:text="Register"
+            android:textColor="#fff" />
+
+        <LinearLayout
+            android:id="@+id/or_linear_layout"
+            android:layout_width="290dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/register1"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="4dp"
+            android:orientation="horizontal"
+            android:weightSum="2">
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="2dp"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="0.9"
+                android:background="@drawable/line_view" />
 
             <TextView
-                android:id="@+id/there"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="40dp"
-                android:text="Hey there," />
-
-            <TextView
-                android:id="@+id/create"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/there"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="4dp"
-                android:layout_marginBottom="4dp"
-                android:text="Create an account"
-                android:textColor="#000"
-                android:textSize="30sp"
-                android:textStyle="bold" />
-
-            <EditText
-                android:id="@+id/first_name1"
-                android:layout_width="315dp"
-                android:layout_height="48dp"
-                android:layout_below="@+id/create"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="4dp"
-                android:layout_marginBottom="4dp"
-                android:background="@drawable/background_edittext"
-                android:drawableLeft="@drawable/profile"
-                android:drawablePadding="5dp"
-                android:hint="First name"
-                android:padding="10dp" />
-
-            <EditText
-
-                android:id="@+id/last_name1"
-                android:layout_width="315dp"
-                android:layout_height="48dp"
-                android:layout_below="@+id/first_name1"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="4dp"
-                android:layout_marginBottom="4dp"
-                android:background="@drawable/background_edittext"
-                android:drawableLeft="@drawable/profile"
-                android:drawablePadding="5dp"
-                android:hint="Last name"
-                android:padding="10dp" />
-
-            <EditText
-
-                android:id="@+id/email_name1"
-                android:layout_width="315dp"
-                android:layout_height="48dp"
-                android:layout_below="@+id/last_name1"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="4dp"
-                android:layout_marginBottom="4dp"
-                android:background="@drawable/background_edittext"
-                android:drawableLeft="@drawable/email"
-                android:drawablePadding="5dp"
-                android:hint="Email"
-                android:padding="10dp" />
-
-            <EditText
-
-                android:id="@+id/password_name1"
-                android:layout_width="315dp"
-                android:layout_height="48dp"
-                android:layout_below="@+id/email_name1"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="4dp"
-                android:layout_marginBottom="4dp"
-                android:background="@drawable/background_edittext"
-                android:drawableLeft="@drawable/lock"
-                android:drawablePadding="5dp"
-                android:hint="Password"
-                android:padding="10dp" />
-
-            <LinearLayout
-                android:id="@+id/privacy_linear_layout"
-                android:layout_width="315dp"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/password_name1"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="4dp"
-                android:layout_marginBottom="4dp"
-                android:orientation="horizontal"
-                android:weightSum="2">
-
-                <CheckBox
-                    android:id="@+id/checkbox_1"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_weight="0.2"
-                    android:gravity="center" />
-
-                <TextView
-                    android:id="@+id/privacy"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_weight="1.8"
-                    android:maxLines="2"
-                    android:text="By continuing you accept our Privacy Policy and Term of Use"
-                    android:textSize="14sp" />
-
-            </LinearLayout>
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/register1"
-                android:layout_width="315dp"
-                android:layout_height="60dp"
-                android:layout_below="@id/privacy_linear_layout"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="90dp"
-                android:layout_marginBottom="4dp"
-                android:background="@drawable/btn_background_register"
-                android:text="Register"
-                android:textColor="#fff" />
-
-            <LinearLayout
-                android:id="@+id/or_linear_layout"
-                android:layout_width="290dp"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/register1"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="4dp"
-                android:orientation="horizontal"
-                android:weightSum="2">
-
-                <View
-                    android:layout_width="0dp"
-                    android:layout_height="2dp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_weight="0.9"
-                    android:background="@drawable/line_view" />
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.2"
-                    android:gravity="center_horizontal"
-                    android:text="Or" />
-
-                <View
-
-                    android:layout_width="0dp"
-                    android:layout_height="2dp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_weight="0.9"
-                    android:background="@drawable/line_view" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/social_linear_layout"
-                android:layout_width="290dp"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/or_linear_layout"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="4dp"
-                android:layout_marginBottom="4dp"
+                android:layout_weight="0.2"
                 android:gravity="center_horizontal"
-                android:orientation="horizontal">
+                android:text="Or" />
 
-                <ImageView
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_marginTop="4dp"
-                    android:layout_marginRight="4dp"
-                    android:layout_marginBottom="4dp"
-                    android:src="@drawable/google" />
+            <View
 
-                <ImageView
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_marginLeft="4dp"
-                    android:layout_marginTop="4dp"
-                    android:layout_marginBottom="4dp"
-                    android:src="@drawable/facebook" />
-            </LinearLayout>
+                android:layout_width="0dp"
+                android:layout_height="2dp"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="0.9"
+                android:background="@drawable/line_view" />
+        </LinearLayout>
 
-            <LinearLayout
-                android:id="@+id/login_Textview_linear_layout"
-                android:layout_width="290dp"
+        <LinearLayout
+            android:id="@+id/social_linear_layout"
+            android:layout_width="290dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/or_linear_layout"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/google_signin"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginRight="4dp"
+                android:layout_marginBottom="4dp"
+                android:src="@drawable/google" />
+
+            <ImageView
+                android:id="@+id/facebook_signin"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="4dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginBottom="4dp"
+                android:src="@drawable/facebook" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/login_Textview_linear_layout"
+            android:layout_width="290dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/social_linear_layout"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/already_have_account"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:layout_marginRight="4dp"
+                android:layout_marginBottom="4dp"
+                android:text="Already have an account?"
+                android:textColor="#000"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/login_textview1"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/social_linear_layout"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="4dp"
+                android:layout_marginRight="4dp"
                 android:layout_marginBottom="4dp"
-                android:gravity="center_horizontal"
-                android:orientation="horizontal">
+                android:layout_toRightOf="@id/already_have_account"
+                android:text="Login"
+                android:textColor="#C58BF2"
+                android:textSize="14sp" />
 
-                <TextView
-                    android:id="@+id/already_have_account"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    android:layout_marginRight="4dp"
-                    android:layout_marginBottom="4dp"
-                    android:text="Already have an account?"
-                    android:textColor="#000"
-                    android:textSize="14sp" />
+        </LinearLayout>
 
-                <TextView
-                    android:id="@+id/login_textview"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/social_linear_layout"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="4dp"
-                    android:layout_marginRight="4dp"
-                    android:layout_marginBottom="4dp"
-                    android:layout_toRightOf="@id/already_have_account"
-                    android:text="Login"
-                    android:textColor="#C58BF2"
-                    android:textSize="14sp" />
-
-            </LinearLayout>
-        </RelativeLayout>
-
-    </androidx.core.widget.NestedScrollView>
+    </RelativeLayout>
 </RelativeLayout>
