--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,41 +4,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Views.Home.Fragments.ProfileFragment">
-
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <ImageView
-                android:id="@+id/back_notification"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_centerVertical="true"
-                android:src="@drawable/ic_baseline_arrow_back_ios_24" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
-                android:fontFamily="@font/poppins"
-                android:text="Profile"
-                android:textColor="#000"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
-        </RelativeLayout>
-    </androidx.appcompat.widget.Toolbar>
+<com.facebook.shimmer.ShimmerFrameLayout
+    android:layout_width="match_parent"
+    android:id="@+id/shimer_profile"
+    android:layout_height="match_parent">
+    <include layout="@layout/shimmer_profile"/>
+</com.facebook.shimmer.ShimmerFrameLayout>
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
+        android:visibility="gone"
+        android:id="@+id/nested_scroll_view_profile"
         android:layout_height="match_parent"
-        android:layout_below="@+id/toolbar">
+   >
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -54,7 +32,7 @@
                 android:src="@drawable/lunch" />
 
             <TextView
-                android:id="@+id/notification_titleview"
+                android:id="@+id/name_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
@@ -70,7 +48,7 @@
                 android:id="@+id/time_textview_notification"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/notification_titleview"
+                android:layout_below="@id/name_title"
                 android:layout_marginLeft="10dp"
                 android:layout_marginBottom="4dp"
                 android:layout_toRightOf="@id/notification_image_item"
@@ -81,6 +59,7 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:layout_width="80dp"
+                android:id="@+id/edit_btn"
                 android:layout_height="40dp"
                 android:layout_alignParentRight="true"
                 android:background="@drawable/btn_background_register"
@@ -116,7 +95,7 @@
             android:textColor="#000"
             android:textStyle="bold"
             android:textSize="16sp"
-            android:id="@+id/text_heart_scrub"
+            android:id="@+id/height_Show"
             />
 
         <TextView
@@ -149,6 +128,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginBottom="4dp"
             android:text="65 kg"
+            android:id="@+id/weight_show"
             android:fontFamily="@font/poppins"
             android:layout_toRightOf="@id/glass"
             android:textColor="#000"
@@ -185,6 +165,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="4dp"
+            android:id="@+id/age_show"
             android:text="22yo"
             android:fontFamily="@font/poppins"
             android:layout_toRightOf="@id/glass"
