--- a/app/src/main/res/layout/activity_tracker.xml
+++ b/app/src/main/res/layout/activity_tracker.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Views.Tracker.ActivityTracker">
+
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
@@ -35,13 +36,10 @@
         </RelativeLayout>
     </androidx.appcompat.widget.Toolbar>
 
-    <androidx.core.widget.NestedScrollView
-android:layout_below="@+id/toolbar"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_below="@id/toolbar">
 
         <LinearLayout
             android:id="@+id/bmi_layout"
@@ -52,17 +50,16 @@ android:layout_below="@+id/toolbar"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="4dp"
             android:background="@drawable/background_target_check"
+            android:gravity="center_vertical"
             android:orientation="horizontal"
             android:padding="10dp"
-            android:gravity="center_vertical"
             android:weightSum="2">
 
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:orientation="vertical"
-                >
+                android:orientation="vertical">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -87,52 +84,50 @@ android:layout_below="@+id/toolbar"
                         android:src="@drawable/glass" />
 
                     <TextView
+                        android:id="@+id/text_heart_scrub"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="4dp"
                         android:layout_marginTop="20dp"
                         android:layout_marginBottom="4dp"
-                        android:text="Water intake"
-                        android:fontFamily="@font/poppins"
                         android:layout_toRightOf="@id/glass"
+                        android:fontFamily="@font/poppins"
+                        android:text="Water intake"
                         android:textColor="#000"
-                        android:textStyle="bold"
                         android:textSize="12sp"
-                        android:id="@+id/text_heart_scrub"
-                        />
+                        android:textStyle="bold" />
 
                     <TextView
+                        android:id="@+id/heartrate_scrub"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_below="@id/text_heart_scrub"
                         android:layout_marginLeft="10dp"
                         android:layout_marginBottom="4dp"
-                        android:text="71l"
-                        android:fontFamily="@font/poppins"
-                        android:textColor="#92A3FD"
-                        android:layout_below="@id/text_heart_scrub"
-                        android:textStyle="bold"
-                        android:textSize="12sp"
                         android:layout_toRightOf="@id/glass"
-                        android:id="@+id/heartrate_scrub"
-                        />
+                        android:fontFamily="@font/poppins"
+                        android:text="71l"
+                        android:textColor="#92A3FD"
+                        android:textSize="12sp"
+                        android:textStyle="bold" />
 
                 </RelativeLayout>
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:layout_marginTop="7dp"
                 android:layout_gravity="center_vertical"
+                android:layout_marginTop="7dp"
+                android:layout_weight="1"
                 android:gravity="center_vertical"
-                android:orientation="vertical"
-                >
+                android:orientation="vertical">
 
                 <RelativeLayout
-                    android:layout_gravity="center_vertical"
-
                     android:layout_width="130dp"
+
                     android:layout_height="90dp"
+                    android:layout_gravity="center_vertical"
                     android:layout_margin="4dp"
                     android:background="@drawable/white_drawable">
 
@@ -145,56 +140,80 @@ android:layout_below="@+id/toolbar"
                         android:src="@drawable/shoes" />
 
                     <TextView
+                        android:id="@+id/text_heart_scrub1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="4dp"
                         android:layout_marginTop="20dp"
                         android:layout_marginBottom="4dp"
-                        android:text="Foot steps"
-                        android:fontFamily="@font/poppins"
                         android:layout_toRightOf="@id/glass1"
+                        android:fontFamily="@font/poppins"
+                        android:text="Foot steps"
                         android:textColor="#000"
-                        android:textStyle="bold"
                         android:textSize="12sp"
-                        android:id="@+id/text_heart_scrub1"
-                        />
+                        android:textStyle="bold" />
 
                     <TextView
+                        android:id="@+id/heartrate_scrub1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_below="@id/text_heart_scrub1"
                         android:layout_marginLeft="10dp"
                         android:layout_marginBottom="4dp"
-                        android:text="2400"
-                        android:fontFamily="@font/poppins"
-                        android:textColor="#92A3FD"
-                        android:layout_below="@id/text_heart_scrub1"
-                        android:textStyle="bold"
-                        android:textSize="12sp"
                         android:layout_toRightOf="@id/glass1"
-                        android:id="@+id/heartrate_scrub1"
-                        />
+                        android:fontFamily="@font/poppins"
+                        android:text="2400"
+                        android:textColor="#92A3FD"
+                        android:textSize="12sp"
+                        android:textStyle="bold" />
 
                 </RelativeLayout>
             </LinearLayout>
 
         </LinearLayout>
+
+<androidx.core.widget.NestedScrollView
+    android:layout_width="match_parent"
+    android:layout_below="@+id/bmi_layout"
+
+    android:layout_height="match_parent">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
         <include
-            android:layout_below="@+id/bmi_layout"
-            layout="@layout/activityprogress"
+            android:id="@+id/shoulder"
+            layout="@layout/shoulder"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:id="@+id/activityprogress"
             android:layout_centerHorizontal="true"
-            android:layout_width="315dp" />
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginRight="20dp" />
 
         <include
-            android:layout_below="@+id/activityprogress"
-            layout="@layout/latest_activity"
+            android:id="@+id/triceps"
+            layout="@layout/triceps"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
+            android:layout_below="@+id/shoulder"
             android:layout_centerHorizontal="true"
-            android:layout_width="315dp" />
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp" />
+
+        <include
+            android:id="@+id/back"
+            layout="@layout/back"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/triceps"
+            android:layout_centerHorizontal="true"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp" />
+
     </RelativeLayout>
+
 </androidx.core.widget.NestedScrollView>
+
+    </RelativeLayout>
 
 </RelativeLayout>
